FILE(GLOB ANKI_INPUT_SOURCES Input.cpp)

IF(${ANKI_WINDOW_BACKEND} STREQUAL "GLXX11" OR ${ANKI_WINDOW_BACKEND} STREQUAL "EGLX11")
	SET(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputX11.cpp)
ELSEIF(${ANKI_WINDOW_BACKEND} STREQUAL "MACOS")
	SET(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputMacos.cpp)
ELSEIF(${ANKI_WINDOW_BACKEND} STREQUAL "ANDROID")
	SET(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputAndroid.cpp)
ELSE()
	SET(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputDummy.cpp)
ENDIF()

ADD_LIBRARY(ankiinput ${ANKI_INPUT_SOURCES})
