FILE(GLOB ANKI_INPUT_SOURCES Input.cpp)

IF(ANKI_WINDOW_BACKEND STREQUAL "GLXX11" OR ANKI_WINDOW_BACKEND STREQUAL "EGLX11")
	SET(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputX11.cpp)
ELSE()
	MESSAGE(FATAL "Unrecognized ANKI_WINDOW_BACKEND: ${ANKI_WINDOW_BACKEND}")
ENDIF()

ADD_LIBRARY(ankiinput ${ANKI_INPUT_SOURCES})
